Update Blog “2019-07-10-ddfd”

--- a/src/pages/blog/2019-07-10-ddfd.md
+++ b/src/pages/blog/2019-07-10-ddfd.md
@@ -3,7 +3,7 @@ templateKey: blog-post
 title: ddfd
 date: 2019-07-10T03:44:20.170Z
 description: dfdf
-featuredpost: false
+featuredpost: true
 featuredimage: /img/blog-index.jpg
 tags:
   - fdfd
